Make navbar absolute on mobile but fixed on desktop
This saves additional space on mobile.

--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -1,15 +1,12 @@
 .navbar {
-  padding: 40px 0;
   background: transparent;
+  padding: 40px 0;
   transition: all 0.3s ease;
 
   @include desktop {
-    background: $white;
-  }
-
-  @include desktop {
-    padding: 15px 20px;
-    margin: 10px 10px 0;
+    position: absolute;
+    padding: 10px 20px;
+    margin: 40px 10px 0;
     border-radius: 5px;
   }
 
@@ -18,6 +15,8 @@
       margin-top: -26px;
       @include desktop {
         margin-top: 0;
+        margin-left: 7px;
+        margin-bottom: 15px;
         width: 80%;
       }
     }
@@ -29,7 +28,16 @@
     box-shadow: 0px 10px 20px 0px rgba(50, 65, 141, 0.1);
 
     @include desktop {
+      background: transparent;
       padding: 15px 20px;
+      box-shadow: none;
+    }
+  }
+
+  &.nav__show {
+    @include desktop {
+      background: $white;
+      box-shadow: 10px 10px 20px 10px rgba(50, 65, 141, 0.1);
     }
   }
 
@@ -66,6 +74,8 @@
       }
 
       &.collapsed {
+        background: $white;
+        
         .navbar-toggler-icon {
           &:nth-child(1) {
             transform: rotate(0);
@@ -83,4 +93,8 @@
       }
     }
   }
+}
+
+.navbar-collapse {
+  transition: none;
 }
